# fastfast

./: LICENSE  Makefile  README.md  pyproject.toml
src/fastfast/: __init__.py  app.py
